--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@iconify/icons-mdi": "^1.1.15",
     "@iconify/react": "^1.1.4",
     "compare-versions": "^3.6.0",
+    "dayjs": "^1.10.5",
     "html-entities": "^2.3.2",
     "install": "^0.13.0",
     "next": "11.0.1",
     "npm": "^7.19.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "recharts": "^2.0.9",
     "s-ago": "^2.2.0"
   },
   "devDependencies": {
