--- a/package.json
+++ b/package.json
@@ -10,21 +10,21 @@
   },
   "dependencies": {
     "@iconify-icons/flat-color-icons": "^1.1.0",
-    "@iconify/icons-mdi": "^1.1.15",
+    "@iconify/icons-mdi": "1.1.21",
     "@iconify/react": "^1.1.4",
     "compare-versions": "^3.6.0",
-    "dayjs": "^1.10.5",
+    "dayjs": "1.10.6",
     "html-entities": "^2.3.2",
     "install": "^0.13.0",
-    "next": "11.0.1",
-    "npm": "^7.19.1",
+    "next": "11.1.0",
+    "npm": "7.21.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "recharts": "^2.0.9",
+    "recharts": "2.1.2",
     "s-ago": "^2.2.0"
   },
   "devDependencies": {
-    "eslint": "7.29.0",
-    "eslint-config-next": "11.0.1"
+    "eslint": "7.32.0",
+    "eslint-config-next": "11.1.0"
   }
 }
