Redesigned the header with monospace typography, improved health scoring display, enhanced chart visuals, and added customizable site name via environment variable.

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
+SITE_NAME = Dash My Plugins
 PLUGINS = media-cleaner, media-file-renamer, wp-retina-2x, wplr-sync, meow-gallery, meow-lightbox, contact-form-block, gallery-custom-links, social-engine, ai-engine, seo-engine, code-engine
