--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
+# Site name for the dashboard
+SITE_NAME=Dash My Plugins
+
 # WordPress plugin slugs to track (comma-separated)
 PLUGINS=media-cleaner, media-file-renamer, wp-retina-2x
